<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:background="@color/purple_500">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/pas_foto"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/purple_500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muhammad_david_kurniawan"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/purple_500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a11_2020_12480"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoby"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/purple_500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menonton_pertandingan_sepak_bola"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_singkat"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/purple_500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saya_merupakan_mahasiswa_teknik_informatika_universitas_dian_nuswantoro_semarang"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:id="@+id/ivEmail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_contact_mail_24"
                    app:tint="@color/purple_500"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:id="@+id/ivCall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_call_24"
                    app:tint="@color/purple_500"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >
            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_home_work_24"
                app:tint="@color/purple_500"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>